# speedpilot_ros_backend

./: .bash_history  .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  build.sh  docker-compose.yml  entrypoint.sh  workspace.sh
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_ws/log/: latest_build
ros2_ws/src/: car_system_launch.py
ros2_ws/src/car_controller/car_controller/: controller_node.py
ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msgs/msg/: Command.msg  VehicleCommand.msg
ros2_ws/src/mycobot_ros2/docker/: Dockerfile
ros2_ws/src/ros2_bridge/: package.xml  setup.py
ros2_ws/src/ros2_bridge/ros2_bridge/: bridge_node.py
ros2_ws/src/speedpilot_description/: package.xml  setup.cfg  setup.py
ros2_ws/src/speedpilot_description/launch/: view_model.launch.py
ros2_ws/src/speedpilot_description/urdf/: car.urdf.xacro
ros2_ws/src/speedpilot_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/speedpilot_gazebo/launch/: sim_launch.py
ros2_ws/src/speedpilot_gazebo/worlds/: turtlebot3_world.world
ros2_ws/src/ultrasonic_sensor/ultrasonic_sensor/: ultrasonic_node.py
